--- a/Elemendide_App/Elemendide_App.csproj
+++ b/Elemendide_App/Elemendide_App.csproj
@@ -40,5 +40,8 @@
     <EmbeddedResource Update="Timer_Page.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="TTT_Page.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
