--- a/Elemendide_App/Elemendide_App.csproj
+++ b/Elemendide_App/Elemendide_App.csproj
@@ -37,6 +37,9 @@
     <EmbeddedResource Update="StepperSlider_Page.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Table_Page.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Timer_Page.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
