--- a/Elemendide_App.Android/Elemendide_App.Android.csproj
+++ b/Elemendide_App.Android/Elemendide_App.Android.csproj
@@ -101,5 +101,12 @@
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-hdpi\list.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Images\about.png" />
+    <AndroidResource Include="Resources\drawable\icon.png">
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
