--- a/Elemendide_App.Android/Elemendide_App.Android.csproj
+++ b/Elemendide_App.Android/Elemendide_App.Android.csproj
@@ -107,6 +107,8 @@
       <Generator>MSBuild:UpdateGeneratedFiles</Generator>
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\drawable\button_home.png" />
+    <AndroidResource Include="Resources\drawable\back.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
